@@ -1,3 +1,7 @@
+2014-03-18  6.8.8-9 Cristy  <quetzlzacatenango@image...>
+  * Quantize() arguments global and transparent switched (reference
+    www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25238).
+
 2011-12-25  6.7.4-2 Cristy  <quetzlzacatenango@image...>
   * Relax when PerlMagick tosses an image when an exception is thrown.
 
